# rust_spirv_try

./: .gitignore  Cargo.toml  THESIS_PLAN.md  start.md
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs  main.rs
crates/spirv_build/: Cargo.toml
crates/spirv_build/src/: main.rs
docs/: benchmarking.md  setup_wsl2.md
kernels/python/: vector_add.py
kernels/rust_spirv/build_vector_add/: Cargo.toml
kernels/rust_spirv/build_vector_add/src/: main.rs
kernels/rust_spirv/vector_add/: Cargo.toml
kernels/rust_spirv/vector_add/src/: lib.rs
src/: main.rs
